--- a/scss/_stimulusArea.scss
+++ b/scss/_stimulusArea.scss
@@ -1,13 +1,10 @@
 .stimulusArea{
-
   position:absolute;
     top:0;
     left:0;
     right:0;
     bottom:0;
-
 }
-
 
 .stimulusArea img{
   margin:0 auto;
@@ -15,3 +12,15 @@
   height:100%;
 
 }
+
+
+.stimulusArea h1{
+  text-align:center;
+  font-size:50px;
+
+  justify-content: center;/* 3 */
+  align-items: center;    /* 4 */
+  height:100%;
+
+}
+
