changing image to kanji

--- a/views/explanation.jade
+++ b/views/explanation.jade
@@ -71,6 +71,10 @@ block append body_end
 block basic_content
   include /includes/answerScale
   .questionArea
+    p(style="color:red") この説明は、<a href="http://sd.kotodama.fumicode.com"> デザイン感覚調査</a> に関する説明です。
+      | 漢字の感じ調査も同じような感じですので、ざっと読んで、一番下の回答を始めるボタンを選んでください。
+    p
+
     p この調査は、電気通信大学 坂本研究室 修士学生の石井将文の研究の調査です。
     p 私は、人間の視覚と感情の関わりについて調べるために、視覚を学習するAI「コトダマ」を制作しました。電気通信大学より特許申請中の技術です。
     h2 コトダマとは
