--- a/views/index.jade
+++ b/views/index.jade
@@ -34,8 +34,8 @@ block append body_end
   
 block basic_content
   .questionArea
-    h1 徹底調査！あなたのデザイン感覚！
-    p この調査では、あなたの図形に対するイメージ「デザイン感覚」を、独自開発のヴィジュアル人工知能「コトダマ」を用いて調べます。
+    h1 徹底調査！あなたの漢字の感じ！
+    p この調査では、あなたの漢字に対するイメージ「漢字の感じ」を調べます。
 
 
     .paperContainer
@@ -47,8 +47,8 @@ block basic_content
 
 
   
-    p 全てのアンケートに答えると、あなたのデザイン感覚に対する「支持率」がわかります。あなたは、多くの人に支持されるデザイン感覚の持ち主でしょうか。それとも、前衛的なデザイン感覚の持ち主でしょうか。
-    p 19のコトダマに対して、その図形のイメージを答えることで、あなたのデザイン感覚支持率を調べましょう！
+    p 全てのアンケートに答えると、あなたの漢字の感じに対する「支持率」がわかります。あなたは、多くの人に支持される感覚の持ち主でしょうか。それとも、前衛的な漢字の感じの持ち主でしょうか。
+    p 9つの漢字のうち一つに対して回答していただくだけでかまいません。あなたの漢字の感じ支持率を調べましょう！
 
 
     h3 デザイン感覚調査についての説明
@@ -57,7 +57,7 @@ block basic_content
 
     hr
 
-    h3 デザイン感覚調査をはじめる
+    h3 漢字の感じ調査をはじめる
     p.aligncenter
       a.button(href="/questionnaires/start") 調査に答える
 
