--- a/views/questions-ave-of-ave.jade
+++ b/views/questions-ave-of-ave.jade
@@ -14,7 +14,13 @@ block basic_content
   - var sorted_questions = questions.sort((a,b)=>a.dev_rate - b.dev_rate)
 
   each question in sorted_questions
-    h2 #{question.id}: #{question.left} <=> #{question.right}
+
+
+    table.n(style="margin-bottom:0;")
+      tr
+        td(style="width:20%") #{question.id}:
+        td(style="width:60%;text-align:center;margin-bottom:0")= question.left + " < = >  " +  question.right
+        td
 
     - var ave = question.ave_rate;
     - var dev = question.dev_rate;
