--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -41,6 +41,12 @@ a {
     outline: $focus-outline;
     outline-offset: $focus-outline-offset;
   }
+
+  &.n{
+    color: inherit;
+    text-decoration: inherit;
+    
+  }
 }
 
 hr {
