--- a/views/questions-ave-of-ave.jade
+++ b/views/questions-ave-of-ave.jade
@@ -9,7 +9,7 @@ block topbar
 
 block basic_content
   include /includes/answerScale
-
+  include /includes/questionHeader
 
   h1 質問一覧
 
@@ -21,14 +21,10 @@ block basic_content
   each question in sorted_questions
 
 
-    table.n(style="margin-bottom:0;")
-      tr
-        td(style="width:20%") #{question.id}:
-        td(style="width:60%;text-align:center;margin-bottom:0")= question.left + " < = >  " +  question.right
-        td
 
     - var ave = question.ave_rate;
     - var dev = question.dev_rate;
     - var data = question.data_rate;
-    +answerScale(ave, dev, null, null, data)
+    +questionHeader(question)
+    +answerScale(ave, dev, null, null, data,question)
 
