make it possible to delete questionnaire_answer

--- a/views/admin.jade
+++ b/views/admin.jade
@@ -9,10 +9,14 @@ block basic_content
 
   table
     tr
-      td 
+      td
         a.button(href="/admin/users") ユーザーの回答
       td 
+        a.button(href="/admin/questionnaire_answers") 全ての回答
+    tr
+      td 
         a.button(href="/admin/kotodamas") コトダマごとに見る
+
       td 
         a.button(href="/admin/questions") 質問ごとに見る
   
