--- a/views/includes/answerScale.jade
+++ b/views/includes/answerScale.jade
@@ -22,7 +22,7 @@ mixin answerScale(ave, dev, my_ans_rate, my_ans, data, question)
             //コトダマが与えられた場合
           else if typeof point == "object" 
             .answerScale__data(
-              style="left:#{point.ave*100}%;margin-top:#{rate*20}px; opacity:;background:none") 
+              style="left:#{point.ave*100}%;margin-top:#{rate*20}px; opacity:1;background:none") 
               a(href="/admin/kotodamas/#{point.questionnaire_id}##{question.id}")
                 img(src="/images/kotodamas/#{point.questionnaire_id.slice(1)}.png"  style="width:100%")
 
