--- a/views/questionnaire_answers.jade
+++ b/views/questionnaire_answers.jade
@@ -6,7 +6,7 @@ block topbar
   a(href="/admin") 管理画面トップ
 
 block basic_content
-  h1 全ての回答
+  h1 全ての回答 (#{questionnaire_answers.length } 件) 
 
   table
     thead
