--- a/scss/_fullScreenPage.scss
+++ b/scss/_fullScreenPage.scss
@@ -1,4 +1,3 @@
-
 .fullScreenPage{
   position:absolute;
     top:0;
@@ -7,6 +6,16 @@
     bottom:0;
 
   overflow:hidden;
+}
+
+
+.fullScreenPage__topbar{
+  position:absolute;
+    top:0;
+    right:0;
+    left:0;
+  height:$topbar-height;
+
 }
 
 
