--- a/views/layouts/basic_layout.jade
+++ b/views/layouts/basic_layout.jade
@@ -2,8 +2,9 @@ extends /layouts/struct
 
 block content
   .fullScreenPage
-    .topbar
-      block topbar
+    .fullScreenPage__top
+      .topbar
+        block topbar
 
     .fullScreenPage__topbarBottom
       .fullScreenPage__full
