feat(topbar): disabled fixed topbar in order to take screenshot

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -687,18 +687,19 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  overflow: hidden; }
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch; }
 
-/* line 12, scss/_fullScreenPage.scss */
-.fullScreenPage__topbar {
+/* line 25, scss/_fullScreenPage.scss */
+.fullScreenPage__topbar--fixed {
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   height: 60px; }
 
-/* line 22, scss/_fullScreenPage.scss */
-.fullScreenPage__topbarBottom {
+/* line 36, scss/_fullScreenPage.scss */
+.fullScreenPage__topbarBottom--fixed {
   position: absolute;
   top: 60px;
   left: 0;
@@ -706,7 +707,7 @@ body {
   bottom: 0;
   -webkit-overflow-scrolling: touch; }
 
-/* line 33, scss/_fullScreenPage.scss */
+/* line 48, scss/_fullScreenPage.scss */
 .fullScreenPage__top {
   position: absolute;
   top: 0;
@@ -716,7 +717,7 @@ body {
   height: 10%;
   padding: 5px; }
 
-/* line 44, scss/_fullScreenPage.scss */
+/* line 59, scss/_fullScreenPage.scss */
 .fullScreenPage__bottom {
   position: absolute;
   right: 0;
@@ -728,7 +729,7 @@ body {
   overflow: scroll;
   -webkit-overflow-scrolling: touch; }
 
-/* line 61, scss/_fullScreenPage.scss */
+/* line 76, scss/_fullScreenPage.scss */
 .fullScreenPage__full {
   position: absolute;
   top: 0;
@@ -739,17 +740,13 @@ body {
   padding: 5px;
   overflow: scroll; }
 
-/* line 3, scss/_topbar.scss */
+/* line 2, scss/_topbar.scss */
 .topbar {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
   box-sizing: border-box;
   height: 60px;
   background: #e8e8e8; }
 
-/* line 19, scss/_topbar.scss */
+/* line 12, scss/_topbar.scss */
 .topbar__inner {
   padding: 5px;
   margin-left: -20px;
@@ -761,19 +758,19 @@ body {
     content: "";
     display: block; }
 
-/* line 27, scss/_topbar.scss */
+/* line 20, scss/_topbar.scss */
 .topbar__title {
   width: calc(50% - 30px);
   float: left;
   margin-left: 20px; }
 
-/* line 32, scss/_topbar.scss */
+/* line 25, scss/_topbar.scss */
 .topbar__userInfo {
   width: calc(50% - 30px);
   float: left;
   margin-left: 20px; }
 
-/* line 36, scss/_topbar.scss */
+/* line 29, scss/_topbar.scss */
 .topbar__id {
   display: inline; }
 
