--- a/views/layouts/basic_layout.jade
+++ b/views/layouts/basic_layout.jade
@@ -2,11 +2,10 @@ extends /layouts/struct
 
 block content
   .fullScreenPage
-    .fullScreenPage__top
+    .fullScreenPage__topbar
       .topbar
         block topbar
 
     .fullScreenPage__topbarBottom
-      .fullScreenPage__full
-        block basic_content
+      block basic_content
 
