fix(fullscreen): fixed difference

--- a/scss/_fullScreenPage.scss
+++ b/scss/_fullScreenPage.scss
@@ -14,12 +14,14 @@
 
 
 .fullScreenPage__topbar{
-
+  position:relative;
 }
 
 
 .fullScreenPage__topbarBottom{
+  padding:1em;
 
+  position:relative;
 }
 
 .fullScreenPage__topbar--fixed{
