--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -694,7 +694,16 @@ body {
   overflow: scroll;
   -webkit-overflow-scrolling: touch; }
 
-/* line 25, scss/_fullScreenPage.scss */
+/* line 16, scss/_fullScreenPage.scss */
+.fullScreenPage__topbar {
+  position: relative; }
+
+/* line 21, scss/_fullScreenPage.scss */
+.fullScreenPage__topbarBottom {
+  padding: 1em;
+  position: relative; }
+
+/* line 27, scss/_fullScreenPage.scss */
 .fullScreenPage__topbar--fixed {
   position: absolute;
   top: 0;
@@ -702,7 +711,7 @@ body {
   left: 0;
   height: 60px; }
 
-/* line 36, scss/_fullScreenPage.scss */
+/* line 38, scss/_fullScreenPage.scss */
 .fullScreenPage__topbarBottom--fixed {
   position: absolute;
   top: 60px;
@@ -711,7 +720,7 @@ body {
   bottom: 0;
   -webkit-overflow-scrolling: touch; }
 
-/* line 48, scss/_fullScreenPage.scss */
+/* line 50, scss/_fullScreenPage.scss */
 .fullScreenPage__top {
   position: absolute;
   top: 0;
@@ -721,7 +730,7 @@ body {
   height: 10%;
   padding: 5px; }
 
-/* line 59, scss/_fullScreenPage.scss */
+/* line 61, scss/_fullScreenPage.scss */
 .fullScreenPage__bottom {
   position: absolute;
   right: 0;
@@ -733,7 +742,7 @@ body {
   overflow: scroll;
   -webkit-overflow-scrolling: touch; }
 
-/* line 76, scss/_fullScreenPage.scss */
+/* line 78, scss/_fullScreenPage.scss */
 .fullScreenPage__full {
   position: absolute;
   top: 0;
