--- a/views/layouts/stimulus_layout.jade
+++ b/views/layouts/stimulus_layout.jade
@@ -2,8 +2,9 @@ extends /layouts/struct
 
 block content
   .fullScreenPage
-    .topbar
-      block topbar
+    .fullScreenPage__topbar
+      .topbar
+        block topbar
 
     .fullScreenPage__topbarBottom
       .fullScreenPage__top
