--- a/views/includes/questionHeader.jade
+++ b/views/includes/questionHeader.jade
@@ -1,6 +1,6 @@
 mixin questionHeader(question)
   if question
-    table.n(id="#{question.id}" style="margin-bottom:0;")
+    table.n(id="#{question.id}" style="margin:0;")
       tr
         td(style="width:20%") #{question.id}:
         td(style="width:25%;text-align:right;")
