--- a/views/includes/answerVote.jade
+++ b/views/includes/answerVote.jade
@@ -4,7 +4,7 @@ mixin answerVote(data)
   - var votes = {1:0,2:0,3:0,4:0,5:0,6:0,7:0};
   - data.forEach((value)=> votes[value]++ )
 
-  table.n(style="margin-top:0;")
+  table.n(style="margin:0;")
     thead
       tr
         each vote,key in votes
